<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".activity.RegisterActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">


        <!-- <TextView
             android:layout_width="match_parent"
             android:text="Welcome Car Booking App"
             android:textSize="25dp"
             android:layout_marginTop="30dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:gravity="center"
             android:layout_height="wrap_content"/>-->


        <ImageView
            android:id="@+id/btBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:src="@drawable/back_button" />

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:src="@drawable/car" />


        <TextView
            android:id="@+id/tvIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/create_new_account"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <!--    <ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_marginStart="40dp"-->
    <!--        android:layout_marginTop="225dp"-->
    <!--        android:layout_marginEnd="40dp">-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarRl"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext01"
                android:drawableStart="@drawable/person"
                android:drawablePadding="10dp"
                android:hint="@string/name"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/Gray01" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTil"
            android:layout_marginTop="15dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext01"
                android:drawableStart="@drawable/baseline_email_gray"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/Gray01" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilEmail"
            android:layout_marginTop="15dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext01"
                android:drawableStart="@drawable/baseline_lock_gray"
                android:drawablePadding="10dp"
                android:hint="@string/passwordo"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/Gray01" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilPassword"
            android:layout_marginTop="15dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext01"
                android:drawableStart="@drawable/baseline_lock_gray"

                android:drawablePadding="10dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/Gray01" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userTitle"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/Purpule"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="Already have an account?Login"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilConfirmPassword"
            android:layout_marginTop="15dp"
            app:hintEnabled="false">


<!--            <Spinner-->
<!--                android:id="@+id/dropDown"-->
<!--                android:background="@drawable/shape_edittext01"-->
<!--                android:drawableStart="@drawable/b_user"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="40dp"/>-->

            <EditText
                android:id="@+id/etUserType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="User / Admin"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/Gray01" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <!--    </ScrollView>-->


</RelativeLayout>